--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -43,7 +43,7 @@ In that sense, this chapter presents a word representation model based on a gene
 %In the following chapter, we show in our experiments that this is indeed the case. 
 .
 
-\section{Linguistic Networks in Semantic NLP Tasks}
+\section{Linguistic Networks in Semantic NLP Tasks}\label{sec:ling_net_nlp}
 
 
 
