--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusions and Future Work}
 \label{chap:conclusions}
 %\minitoc
-\section{Conclusions}
+\section{Conclusion}
 Linguistic Networks are useful methods to understand the nature of our language. In the literature, they are generally used to comprehend either the dynamics of words and other textual units within language, and to solve practical NLP tasks. Nonetheless, no mater the objective, they are usually based on the distributional hypothesis, that is, words will be found in similar contexts if they tend to be semantically related.
 
 Distributional models are based on several parameters, such as the size of the context to be used, their linguistic type (either syntactic, lexical, etc.), the weight that affects each context-word co-occurrence, as well as determining how the semantic relatedness is computed. Indeed, most of the linguistic networks in the literature deal with a single type of contexts, either lexical or syntactical.
