--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -217,6 +217,23 @@ year= {2016},
   publisher={John Benjamins publishing company}
 }
 
+@inproceedings{Niu2007,
+ author = {Niu, Zheng-Yu and Ji, Dong-Hong and Tan, Chew-Lim},
+ title = {I2R: Three Systems for Word Sense Discrimination, Chinese Word Sense Disambiguation, and English Word Sense Disambiguation},
+ booktitle = {Proceedings of the 4th International Workshop on Semantic Evaluations},
+ series = {SemEval '07},
+ year = {2007},
+ location = {Prague, Czech Republic},
+ pages = {177--182},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1621474.1621511},
+ acmid = {1621511},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+
+
 @book{nida1979componential,
   title={A Componential Analysis of Meaning: An Introduction to Semantic Structures},
   author={Nida, Eugene A},
@@ -592,7 +609,7 @@ year= {2016},
   location  = {Valletta, Malta},
 }
 
-@article{nastase2015survey,
+@article{nastase2015,
   title={A survey of graphs in natural language processing},
   author={Nastase, Vivi and Mihalcea, Rada and Radev, Dragomir R},
   journal={Natural Language Engineering},
