--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -17,7 +17,7 @@
 \noindent \large {Defended by\\}
 \noindent \LARGE Edmundo-Pavel \textsc{Soriano-Morales} \\
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{Hypergraphs and information fusion for term representation enrichment. Applications to word sense disambiguation and named entity recognition}} \\
+\noindent {\Huge \textbf{Hypergraphs and information fusion for term representation enrichment. Applications to named entity recognition and word sense disambiguation}} \\
 \vspace*{0.8cm}
 \noindent \Large Thesis Advisor: Sabine \textsc{Loudcher} and Julien \textsc{Ah-Pine} \\
 
